--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "supercash",
+  "name": "nobank",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -9,10 +9,13 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/geolocation": "^3.1.0",
     "expo": "~50.0.7",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
-    "react-native": "0.73.4"
+    "react-native": "0.73.4",
+    "react-native-maps": "1.10.0",
+    "expo-location": "~16.5.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
