--- a/package.json
+++ b/package.json
@@ -10,12 +10,18 @@
   },
   "dependencies": {
     "@react-native-community/geolocation": "^3.1.0",
+    "@react-navigation/bottom-tabs": "^6.5.12",
+    "@react-navigation/native": "^6.1.10",
+    "@react-navigation/native-stack": "^6.9.18",
     "expo": "~50.0.7",
+    "expo-location": "~16.5.3",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-native": "0.73.4",
+    "react-native-google-places-autocomplete": "^2.5.6",
     "react-native-maps": "1.10.0",
-    "expo-location": "~16.5.3"
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
