--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@pioneer-platform/loggerdog": "^8.3.1",
+    "@pioneer-platform/pioneer-client": "^9.2.4",
+    "@pioneer-platform/pioneer-events": "^8.3.1",
     "@react-native-community/geolocation": "^3.1.0",
     "@react-navigation/bottom-tabs": "^6.5.12",
     "@react-navigation/native": "^6.1.10",
     "@react-navigation/native-stack": "^6.9.18",
+    "dotenv": "^16.4.5",
+    "eth-token-wallet": "^1.0.22",
     "expo": "~50.0.7",
     "expo-location": "~16.5.3",
     "expo-status-bar": "~1.11.1",
