--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "eth-token-wallet": "^1.0.22",
     "expo": "~50.0.7",
     "expo-location": "~16.5.3",
+    "expo-module-scripts": "^3.4.1",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-native": "0.73.4",
