--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~3.1.3",
     "@pioneer-platform/loggerdog": "^8.3.1",
     "@pioneer-platform/pioneer-client": "^9.2.4",
     "@pioneer-platform/pioneer-events": "^8.3.1",
+    "@react-native-async-storage/async-storage": "^1.22.2",
     "@react-native-community/geolocation": "^3.1.0",
     "@react-navigation/bottom-tabs": "^6.5.12",
     "@react-navigation/native": "^6.1.10",
@@ -23,11 +25,13 @@
     "expo-module-scripts": "^3.4.1",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-native": "0.73.4",
     "react-native-google-places-autocomplete": "^2.5.6",
     "react-native-maps": "1.10.0",
     "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0"
+    "react-native-screens": "~3.29.0",
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
