--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~3.1.3",
+    "@medardm/react-native-bip39": "^3.0.2",
     "@pioneer-platform/loggerdog": "^8.3.1",
     "@pioneer-platform/pioneer-client": "^9.2.4",
     "@pioneer-platform/pioneer-events": "^8.3.1",
@@ -19,18 +20,23 @@
     "@react-navigation/native": "^6.1.10",
     "@react-navigation/native-stack": "^6.9.18",
     "dotenv": "^16.4.5",
-    "eth-token-wallet": "^1.0.22",
+    "ethers": "^6.11.1",
     "expo": "~50.0.7",
+    "expo-crypto": "~12.8.1",
     "expo-location": "~16.5.3",
     "expo-module-scripts": "^3.4.1",
     "expo-status-bar": "~1.11.1",
+    "qrcode": "^1.5.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.4",
+    "react-native-get-random-values": "^1.10.0",
     "react-native-google-places-autocomplete": "^2.5.6",
     "react-native-maps": "1.10.0",
+    "react-native-randombytes": "^3.6.1",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
+    "react-native-securerandom": "^1.0.1",
     "react-native-web": "~0.19.6"
   },
   "devDependencies": {
