--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-navigation/native-stack": "^6.9.18",
     "dotenv": "^16.4.5",
     "eth-token-wallet": "^1.0.22",
+    "ethers": "^6.11.1",
     "expo": "~50.0.7",
     "expo-location": "~16.5.3",
     "expo-module-scripts": "^3.4.1",
@@ -27,6 +28,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.4",
+    "react-native-get-random-values": "^1.10.0",
     "react-native-google-places-autocomplete": "^2.5.6",
     "react-native-maps": "1.10.0",
     "react-native-safe-area-context": "4.8.2",
