Fix: CashModal Close Button and dimensio

--- a/package.json
+++ b/package.json
@@ -18,9 +18,10 @@
     "@react-navigation/bottom-tabs": "^6.5.12",
     "@react-navigation/native": "^6.1.10",
     "@react-navigation/native-stack": "^6.9.18",
+    "axios": "^1.6.7",
     "dotenv": "^16.4.5",
     "eth-token-wallet": "^1.0.22",
-    "ethers": "^6.11.1",
+    "ethers": "^6.0.0",
     "expo": "~50.0.7",
     "expo-location": "~16.5.3",
     "expo-module-scripts": "^3.4.1",
