--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.4",
+    "react-native-confetti": "^0.1.0",
     "react-native-get-random-values": "^1.10.0",
     "react-native-google-places-autocomplete": "^2.5.6",
     "react-native-maps": "1.10.0",
